fixed some padding not needed as the main element is all shift

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -339,7 +339,7 @@ main > .section > .default-content-wrapper > p {
 }
 
 .blog main .autoblog {
-  padding: 64px 32px 10px;
+  padding: 0px 32px 10px;
 }
 
 .blog main .autoblog > div > div {
